--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "bootstrap-sass": "^3.3.7",
     "esbuild": "^0.17.18",
-    "mapbox-gl": "^2.14.1"
+    "mapbox-gl": "^2.14.1",
+    "sass": "^1.62.1"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds"
   }
 }
