--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "bootstrap-sass": "^3.3.7",
     "esbuild": "^0.17.18",
     "mapbox-gl": "^2.14.1",
+    "mapkick": "^0.2.5",
     "sass": "^1.62.1",
     "tailwindcss-stimulus-components": "^3.0.4"
   },
