Enhance security for user sign in and some default domain and databse options

--- a/config/database.yml
+++ b/config/database.yml
@@ -84,3 +84,9 @@ production:
   database: calcometer_production
   username: calcometer
   password: <%= ENV["CALCOMETER_DATABASE_PASSWORD"] %>
+
+  # Add timeouts to production database
+  connect_timeout: 2
+  checkout_timeout: 5
+  variables:
+    statement_timeout: 5000 # ms
