--- a/.gitignore
+++ b/.gitignore
@@ -24,18 +24,21 @@
 /tmp/storage/*
 !/tmp/storage/
 !/tmp/storage/.keep
-
 /public/assets
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+app/config/credentials.yml.enc
+credentials.yml.enc
 
+# Ignore yarn files
 /app/assets/builds/*
 !/app/assets/builds/.keep
-
 /node_modules
+
 # Ignore .env file containing credentials.
 .env*
+
 # Ignore Mac and Linux file system files
 *.swp
 .DS_Store
