--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.7",
+    "@rails/request.js": "^0.0.9",
     "bootstrap": "^5.2.3",
     "bootstrap-sass": "^3.3.7",
     "esbuild": "^0.17.18",
